--- a/properties/.env.prod
+++ b/properties/.env.prod
@@ -1,7 +1,10 @@
+# Define Port
 PORT=4000
 
+# Define DB
 DB_PORT=5432
 DB_SCHEMA=postgres
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_HOST=localhost
+
