--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
-    "express-validator": "^7.0.1",
     "graphql": "^16.8.1",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
@@ -28,6 +28,7 @@
     "@types/node": "^20.12.7",
     "@types/nodemon": "^1.19.6",
     "@types/pg": "^8.11.5",
+    "@types/validator": "^13.11.9",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
