--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/express-validator": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
     "@types/nodemon": "^1.19.6",
     "@types/pg": "^8.11.5",
+    "@types/uuid": "^9.0.8",
     "@types/validator": "^13.11.9",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
