--- a/properties/.env.prod
+++ b/properties/.env.prod
@@ -8,3 +8,8 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 DB_HOST=localhost
 
+# Token
+TOKEN_TIME=3600
+REFRESH_TOKEN_TIME=260000
+TOKEN_SECRET=secretDemo
+
