--- a/properties/.env.dev
+++ b/properties/.env.dev
@@ -9,7 +9,7 @@ DB_PASSWORD=postgres
 DB_HOST=localhost
 
 # Token
-TOKEN_TIME=3600
-REFRESH_TOKEN_TIME=260000
+TOKEN_TIME=3h
+REFRESH_TOKEN_TIME=36h
 TOKEN_SECRET=secretDemo
 
