--- a/properties/.env.prod
+++ b/properties/.env.prod
@@ -13,3 +13,8 @@ TOKEN_TIME=3h
 REFRESH_TOKEN_TIME=36h
 TOKEN_SECRET=secretDemo
 
+# Shopify
+SHOPIFY_STORE_URL=
+SHOPIFY_API_KEY=
+SHOPIFY_SECRET_KEY=
+
