--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@shopify/app-bridge": "^3.7.10",
     "body-parser": "^1.20.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
