--- a/properties/.env.dev
+++ b/properties/.env.dev
@@ -11,5 +11,10 @@ DB_HOST=localhost
 # Token
 TOKEN_TIME=3h
 REFRESH_TOKEN_TIME=36h
-TOKEN_SECRET=secretDemo
+TOKEN_SECRET=secretDemo\
+
+# Shopify
+SHOPIFY_STORE_URL=
+SHOPIFY_API_KEY=
+SHOPIFY_SECRET_KEY=
 
