--- a/properties/.env.prod
+++ b/properties/.env.prod
@@ -11,7 +11,7 @@ DB_HOST=localhost
 # Token
 TOKEN_TIME=3h
 REFRESH_TOKEN_TIME=36h
-TOKEN_SECRET=secretDemo
+TOKEN_SECRET=
 
 # Shopify
 SHOPIFY_STORE_URL=
