--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "@shopify/app-bridge": "^3.7.10",
-        "body-parser": "^1.20.2",
+    "@shopify/storefront-api-client": "^0.3.3",
+    "body-parser": "^1.20.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "pg": "^8.11.5",
-        "uuid": "^9.0.1",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
