--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/validator": "^13.11.9",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5"
   },
   "keywords": [],
