--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@shopify/storefront-api-client": "^0.3.3",
     "body-parser": "^1.20.2",
     "cross-env": "^7.0.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
