--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@shopify/app-bridge": "^3.7.10",
     "@shopify/graphql-client": "^0.10.3",
+    "@shopify/shopify-api": "^10.0.0",
     "@shopify/storefront-api-client": "^0.3.3",
     "body-parser": "^1.20.2",
+    "cookie": "^0.6.0",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
@@ -24,7 +26,10 @@
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
+    "nonce": "^1.0.4",
     "pg": "^8.11.5",
+    "querystring": "^0.2.1",
+    "request-promise": "^4.2.6",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
   },
